src/cfg/snapshots/cs2_keybind_manager__cfg__tests__generator__generator__mixed_kinds.snap
---
source: src/cfg/tests.rs
expression: render(&files)
---
=== bindmgr_page_1.cfg ===
// Generated by CS2 Keybind Manager. Do not edit by hand.
// Page 1 of 1: Mixed

bind "1" "say Rush B"
bind "2" "slot1"
bind "3" "say_team Hold A"

bind "f1" "exec bindmgr_page_1"
