src/cfg/snapshots/cs2_keybind_manager__cfg__tests__generator__generator__single_page.snap
---
source: src/cfg/tests.rs
assertion_line: 81
expression: render(&files)
---
=== bindmgr_page_1.cfg ===
// Generated by CS2 Keybind Manager. Do not edit by hand.
// Page 1 of 1: Solo

bind "1" "say Hi"

bind "f1" "exec bindmgr_page_1"
