src/cfg/snapshots/cs2_keybind_manager__cfg__tests__generator__generator__three_page_cycle.snap
---
source: src/cfg/tests.rs
assertion_line: 96
expression: render(&files)
---
=== bindmgr_page_1.cfg ===
// Generated by CS2 Keybind Manager. Do not edit by hand.
// Page 1 of 3: Strat Calls

bind "1" "say Rush B"
bind "2" "say Smoke mid"

bind "f1" "exec bindmgr_page_2"

=== bindmgr_page_2.cfg ===
// Generated by CS2 Keybind Manager. Do not edit by hand.
// Page 2 of 3: Trash Talk

bind "1" "say ez"
bind "2" "say ggwp"

bind "f1" "exec bindmgr_page_3"

=== bindmgr_page_3.cfg ===
// Generated by CS2 Keybind Manager. Do not edit by hand.
// Page 3 of 3: Compliments

bind "1" "say Nice shot!"
bind "2" "say Good half"

bind "f1" "exec bindmgr_page_1"
